--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         var guess = prompt("Guess a letter, or click Cancel to stop playing.");
         if (guess === null) {
             // Exit the game loop
-            break;
+            alert("Please enter a single letter.");
         } else if (guess.length !== 1) {
             alert("Please enter a single letter.");
         } else {
@@ -63,7 +63,7 @@
     var remainingLetters = word.length;
     while (remainingLetters > 0) {
         showPlayerProgress();
-        getGuess();
+        getGuess();   
     };
 
     showAnswerAndCongratulatePlayer();
